--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-<title>Titulo Teste</title>
+<title>Fanpage de Gatinhos</title>
 
 <meta charset=“utf-8”>
 
@@ -12,9 +12,10 @@
 
 <body>
 
-    <!--titulo2-->
-<h1>Titulo Teste2</h1>
-<h1>Titulo teste3</h1>
+<!--Perfil-->
+    <h1>Perfil #catsoninstagram</h1>
+
+<img src=“images/BulldogFrancês.jpg” />
 
 </body>
 
