--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Perfil-->
     <h1>Perfil #catsoninstagram</h1>
 
-    <img src=“images/BulldogFrancês.jpg” />
+    <img src=“images/Bulldog.jpg” />
 
 </body>
 
